<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registration_all"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <TextView
        android:id="@+id/greeting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/greeting"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/guideline_hor"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:background="@drawable/bottomsheet_bg"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="center"
        app:behavior_hideable="false"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:layout_constraintStart_toStartOf="parent"
        >
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/red"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textColor="@color/black"
            android:layout_marginTop="12dp"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/reg_name_surname"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:background="@drawable/bottomsheet_bg"
        android:orientation="vertical"
        android:visibility="gone"
        app:behavior_hideable="false"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/registration"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/enter_name_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/enter_all_personal_info"
            android:textColor="@color/dark_gray"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/name"
            style="@style/EdittextStyleWithDescription"
            android:layout_marginTop="24dp"
            android:autofillHints=""
            android:hint="@string/name"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/surname"
            style="@style/EdittextStyleWithDescription"
            android:layout_marginTop="12dp"
            android:autofillHints=""
            android:hint="@string/second_name"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/patronymic"
            style="@style/EdittextStyleWithDescription"
            android:layout_marginTop="12dp"
            android:autofillHints=""
            android:hint="@string/patronymic"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/next_btn"
            style="@style/ButtonAddNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_medium"
            android:paddingVertical="10dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/reg_email_pass"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:background="@drawable/bottomsheet_bg"
        android:orientation="vertical"
        android:visibility="visible"
        app:behavior_hideable="false"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/registration_authorisation_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/registration"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/enter_login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/enter_login_password"
            android:textColor="@color/dark_gray"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:boxStrokeColor="@color/gray"
            app:hintTextColor="@color/light_gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login"
                style="@style/EdittextStyleWithDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxStrokeColor="@color/red"
            app:hintTextColor="@color/light_gray"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                style="@style/EdittextStyleWithDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_repeat_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxStrokeColor="@color/gray"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/light_gray"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/repeat_password"
                style="@style/EdittextStyleWithDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repeat_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/finish_reg"
            style="@style/ButtonAddNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_medium"
            android:paddingVertical="10dp"
            android:text="@string/finish"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <Button
            android:id="@+id/to_auth"
            style="@style/ButtonSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_medium"
            android:paddingVertical="10dp"
            android:text="@string/auth"
            android:textAllCaps="false"
            android:textSize="16sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>