<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="100"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_personal_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:contentInsetStartWithNavigation="0dp"
        android:titleTextAppearance="@style/toolbar_style_white_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/chevron_left_white"
        app:title="@string/personal_account"
        app:titleTextColor="@color/white" />

    <ImageView
        android:id="@+id/settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:clickable="true"
        android:paddingVertical="16dp"
        android:src="@drawable/settingsfull"
        app:layout_constraintBottom_toBottomOf="@id/toolbar_personal_account"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/toolbar_personal_account"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.2" />

    <LinearLayout
        android:id="@+id/person_image_frameLayout"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/splash_blue_white_background"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_personal_account">

        <ImageButton
            android:id="@+id/person_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/img_round"
            android:importantForAccessibility="no" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="14dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="Вася Пупкин"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="12dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/person_image_frameLayout" />


    <TextView
        android:id="@+id/history"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:paddingVertical="16dp"
        android:text="@string/history"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="@id/line" />

    <View
        android:id="@+id/line_2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/history" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/line_2">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/purchases_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            tools:listitem="@layout/purchases_item_view" />
    </ScrollView>

    <Button
        android:id="@+id/clean_history"
        style="@style/ButtonAddNotification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:text="@string/clean_history"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start" />

</androidx.constraintlayout.widget.ConstraintLayout>